[iOS] Fix the length pass to memcmp in the fallback versions of String's equal https://bugs.webkit.org/show_bug.cgi?id=112463

Patch by Benjamin Poulain <bpoulain@apple.com> on 2013-03-15
Reviewed by Ryosuke Niwa.

* wtf/text/StringImpl.h:
(WTF::equal): It might be a good idea to compare the full UChar strings...


Canonical link: https://commits.webkit.org/130765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145935 268f45cc-cd09-0410-ab3c-d52691b4dbfc